--- a/src/country.css
+++ b/src/country.css
@@ -90,7 +90,7 @@ h2 {
 
 .single-country {
     width: 26%;
-    height: 300px;
+    /* height: 300px; */
     margin-top: 50px;
 }
 
@@ -102,4 +102,16 @@ h2 {
 .country-logo {
     max-width: 100%;
     max-height: 100%;
+}
+
+.myClass1 {
+    flex-wrap: nowrap !important;
+}
+
+.myClass2 {
+    flex-direction: row !important;
+}
+
+.myClass2 li {
+    margin: 0 10px;
 }
